# Self-driving-Labs

./: .gitignore  README.md
.devcontainer/: Dockerfile.sdl  devcontainer.amd.json  devcontainer.json  devcontainer.nvidia.json  gpu-setup.sh  select-gpu-config.sh
opentrons/: ot2_client.py  ot2_run_protocol_SSH.py  test_pipeline.py
opentrons/protocols/: clanker_protocol_test.py  serial_dilution_tutorial.py
sdl_packages/: envbuild.sh  franka.repos
sdl_packages/aruco_detection/: calibration_params.txt
sdl_packages/aruco_detection/aruco_detector/: package.xml  setup.py
sdl_packages/aruco_detection/aruco_detector/aruco_detector/: aruco_detector.py
sdl_packages/aruco_detection/aruco_detector/launch/: aruco_detector.launch.py
sdl_packages/aruco_detection/aruco_interfaces/: CMakeLists.txt  package.xml
sdl_packages/aruco_detection/aruco_interfaces/srv/: ArucoDetect.srv
sdl_packages/bt_server_pkg/: CMakeLists.txt  package.xml  plugins.xml
sdl_packages/bt_server_pkg/behavior_trees/: BT-Test-BIG.xml  BT-Test-Franka.xml  BT-Test-OT.xml  BT-Test-Parallel.xml  BT-Test.xml  BT-Transport_test.xml  MaterialTransport.xml  MaterialTransportTest.xml
sdl_packages/bt_server_pkg/config/: bt_executor.yaml
sdl_packages/bt_server_pkg/docs/: MaterialTransportSystem.md
sdl_packages/bt_server_pkg/include/bt_server_pkg/: franka_action.hpp  material_tracking_nodes.hpp  mir_mission_action.hpp  opentrons2_run_protocol.hpp
sdl_packages/bt_server_pkg/launch/: bt_server.launch.py
sdl_packages/bt_server_pkg/src/: FrankaCalibrationAction.cpp  FrankaTrajectoryAction.cpp  GoHome.cpp  GoToHome.cpp  GoToMission.cpp  GoToOpenTrons2.cpp  GoToStorage.cpp  MissionIDs.cpp  PickUpAction.cpp  PlaceAction.cpp  bt_server.cpp  franka_action.cpp  material_tracking_nodes.cpp  mir_mission_action.cpp  mir_mission_action_server.py  opentrons2_run_protocol.cpp
sdl_packages/btcpp_ros2_interfaces/: CMakeLists.txt
sdl_packages/btcpp_ros2_interfaces/action/: CubeVisualCalibration.action  GoHome.action  GoToMission.action  PickUp.action  Place.action
sdl_packages/database_service_pkg/: CMakeLists.txt  package.xml
sdl_packages/database_service_pkg/include/database_service/: database_functions.hpp
sdl_packages/database_service_pkg/src/: database_client.cpp  database_functions.cpp  database_service.cpp  interactive_database_test.cpp
sdl_packages/database_service_pkg/srv/: GetOTTraySlot.srv
sdl_packages/franka/mujoco_install/share/mujoco/model/: Makefile  cmake_install.cmake
sdl_packages/franka/multipanda_ros2/: README.md
sdl_packages/franka/multipanda_ros2/franka_bringup/launch/real/: franka.launch.py  multimode_franka.launch.py
sdl_packages/franka/multipanda_ros2/franka_description/: CMakeLists.txt
sdl_packages/franka/multipanda_ros2/franka_description/meshes/visual/: base_body.stl  camera_mount.stl  finger.dae  gripper_tip.stl
sdl_packages/franka/multipanda_ros2/franka_description/robots/common/: base_body.xacro  camera_mount.xacro  hand.xacro
sdl_packages/franka/multipanda_ros2/franka_description/robots/real/: panda_arm.urdf.xacro
sdl_packages/franka/multipanda_ros2/franka_hardware/: CMakeLists.txt  package.xml
sdl_packages/franka/multipanda_ros2/franka_hardware/src/real/: old_values.txt  robot.cpp
sdl_packages/franka/multipanda_ros2/franka_hardware/src/sim/: gripper_sim_action_server.cpp
sdl_packages/franka/multipanda_ros2/franka_moveit_config/config/: joint_limits.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml
sdl_packages/franka/multipanda_ros2/franka_moveit_config/launch/: calibration.py  moveit.launch.py  system.launch.py
sdl_packages/franka/multipanda_ros2/franka_moveit_config/srdf/: panda_arm.xacro
sdl_packages/install/: local_setup.sh  setup.sh
sdl_packages/install/supabase_test/share/supabase_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
sdl_packages/log/: latest_build
sdl_packages/manipulation/manipulation/: CMakeLists.txt  calibrated_transform.txt  package.xml
sdl_packages/manipulation/manipulation/env_meshes/: OT2_ref.stl  glass_holder.stl  storage_board.stl
sdl_packages/manipulation/manipulation/src/: calibration_calc.py  manipulation.cpp
sdl_packages/mir/: package.xml  setup.py
sdl_packages/mir/mir/: mir_api.py  mir_check_position_node.py  mir_goto.py  mir_server_node.py  mir_turn_90.py
sdl_packages/ot2_control/: CMakeLists.txt  package.xml
sdl_packages/ot2_control/ot2_control/: action_caller.py  init_caller.py  interactive_protocol_runner.py  ot2_client.py  ot2_manager.py
sdl_packages/ot2_control/ot2_control/custom_labware/: aau_144_tiprack_3000ul.json  aau_24_tuberack_10000ul.json  aau_24_tuberack_3000ul.json  aau_96_tiprack_3000ul.json
sdl_packages/ot2_control/ot2_control/protocols/: Macro_cuvette_test.py  fehlings_test_protocol.py  full_protocol.py
sdl_packages/ot2_interfaces/: CMakeLists.txt  package.xml
sdl_packages/ot2_interfaces/action/: InitializeProtocol.action  RunProtocol.action
sdl_packages/ot2_interfaces/msg/: Labware.msg
sdl_packages/ot2_ros2/: package.xml  setup.cfg  setup.py
sdl_packages/ot2_ros2/ot2_ros2/: ot2_client.py  ot2_manager.py  ot2_node.py
sdl_packages/ot2_ros2/ot2_ros2/protocols/: Macro_cuvette_test.py
sdl_packages/sdl_bringup/: package.xml  setup.cfg  setup.py
sdl_packages/sdl_bringup/launch/: system.launch.py
sdl_packages/supabase_test/: package.xml  setup.cfg  setup.py
sdl_packages/supabase_test/supabase_test/: supabase_function.py  supabase_node.py
supabase/: docker-compose.yml  seed.sql  start.sh  stop.sh
