<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_server_pkg</name>
  <version>0.0.1</version>
  <description>Behavior Tree server package for MiR robot missions</description>
  <maintainer email="Petaarz@hotmail.com">sdl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>behaviortree_ros2</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>mir</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
