<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_interfaces</name>
  <version>0.0.0</version>
  <description>Service interfaces for ArUco detection.</description>

  <maintainer email="andersbloch09@gmail.com">sdl</maintainer>
  <license>TODO: License declaration</license>

  <!-- Required for generating .srv files -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Dependencies used inside the service -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Linting (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
